2014-02-24  Roland Levillain  <roland@lrde.epita.fr>

	Simplify the implementation of mln::fun::vv2v::algebra::vec.

	* mln/fun/vv2v/vec.hh (mln::fun::vv2v::algebra::vec::operator()):
	Here.
	Fix the documentation.

2011-01-17  Roland Levillain  <roland@lrde.epita.fr>

	* apps/bench/list2table: Generate a shorter table.

2011-01-13  Roland Levillain  <roland@lrde.epita.fr>

	apps/bench: Simplify `fast_static' and `faster_static' cases.

	* apps/bench/trait.hh (mln_static_qixter, mln_static_qixter_)
	(mln_static_fwd_qixter, mln_static_fwd_qixter_)
	(mln_static_bkd_qixter, mln_static_bkd_qixter_):
	Remove macros.
	(mln::static_fwd_qixter, mln::static_bkd_qixter):
	Remove traits.
	(mln::fwd_qixter< image2d<T>, static_window<D, n> >)
	(mln::fwd_qixter< const image2d<T>, static_window<D, n> >)
	(mln::bkd_qixter< image2d<T>, static_window<D, n> >)
	(mln::bkd_qixter< const image2d<T>, static_window<D, n> >):
	New traits.
	* apps/bench/dilation-lena.hh
	(fast_static::dilation): Delegate to fast::dilation.
	(faster_static::dilation): Delegate to faster::dilation.

2011-01-11  Roland Levillain  <roland@lrde.epita.fr>

	apps/bench: Aesthetic changes in the output of list2table.

	* apps/bench/list2table: Here.

2011-01-11  Roland Levillain  <roland@lrde.epita.fr>

	apps/bench: New (postprocessing) script: list2table.

	* apps/bench/list2table: New.

2011-01-11  Roland Levillain  <roland@lrde.epita.fr>

	apps/bench: Split dilation-lena-bench.

	* apps/bench/dilation-lena-bench.cc: Remove and split into...
	* apps/bench/dilation-lena-bench-macros.hh,
	* apps/bench/dilation-lena-bench-fast.cc,
	* apps/bench/dilation-lena-bench-fast_static.cc,
	* apps/bench/dilation-lena-bench-gen.cc,
	* apps/bench/dilation-lena-bench-nongen.cc,
	* apps/bench/dilation-lena-bench-nongen_2ptr.cc:
	...these (new) files.
	* apps/bench/test-dilation-lena-bench.in: New test.
	* apps/bench/Makefile.am (noinst_PROGRAMS): Add
	dilation-lena-bench-nongen, dilation-lena-bench-nongen_2ptr,