@@ -1,3 +1,9 @@
+2014-04-02  Roland Levillain  <roland@lrde.epita.fr>
+
+	Milena: Simplify tests/pw/value.cc.
+
+	* tests/pw/value.cc: Here.
+
 2014-02-24  Roland Levillain  <roland@lrde.epita.fr>
 
 	Simplify the implementation of mln::fun::vv2v::algebra::vec.
